Fix content overlapping mobile menu

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -69,6 +69,7 @@ body {
         position: absolute;
         top: 9px;
         right: $spacing-unit / 2;
+        z-index: 1;
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
